<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_welcome">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_32dp"
            android:layout_marginEnd="@dimen/distance_16dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/sofia_pro_medium"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/activity_welcome_skip_button"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="@dimen/size_14sp"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/distance_40dp"
            android:layout_marginTop="@dimen/distance_200dp"
            android:fontFamily="@font/sofia_pro_soft_regular"
            android:text="@string/activity_welcome_title"
            android:textColor="@color/bunker"
            android:textSize="@dimen/size_53sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_food_hub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_4dp"
            android:fontFamily="@font/sofia_pro_soft_regular"
            android:text="@string/activity_food_hub"
            android:textColor="@color/orange"
            android:textSize="@dimen/size_45sp"
            app:layout_constraintStart_toStartOf="@+id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />


        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_16dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:lines="2"
            android:text="@string/activity_welcome_message"
            android:textColor="@color/oxford_blue"
            android:textSize="@dimen/size_18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_food_hub"
            app:layout_constraintTop_toBottomOf="@+id/tv_food_hub" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/distance_60dp"
            android:layout_marginBottom="@dimen/distance_20dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:lines="2"
            android:text="@string/activity_welcome_already_have_account"
            android:textColor="@color/white"
            android:textSize="@dimen/size_14sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_start"
            app:layout_constraintStart_toStartOf="@+id/btn_start"
            app:layout_constraintTop_toBottomOf="@+id/btn_start" />

        <TextView
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/distance_8dp"
            android:layout_marginBottom="@dimen/distance_20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sofia_pro_medium"
            android:lines="2"
            android:text="@string/activity_welcome_sign_in_underline"
            android:textColor="@color/white"
            android:textSize="@dimen/size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_have_account"
            app:layout_constraintTop_toBottomOf="@+id/btn_start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/distance_40dp"
            android:layout_marginBottom="@dimen/distance_100dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/sofia_pro_medium"
            android:paddingVertical="@dimen/distance_10dp"
            android:text="@string/activity_welcome_start_button_message"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/size_17sp"
            app:backgroundTint="@color/background_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/distance_20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/sofia_pro_medium"
            android:paddingHorizontal="@dimen/distance_22dp"
            android:paddingVertical="@dimen/distance_10dp"
            android:text="@string/facebook_button"
            android:textColor="@color/black"
            android:textSize="@dimen/size_13sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/icon_facebook"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:layout_constraintBottom_toTopOf="@id/btn_start"
            app:layout_constraintEnd_toStartOf="@id/btn_google"
            app:layout_constraintStart_toStartOf="@+id/btn_start" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/distance_10dp"
            android:layout_marginBottom="@dimen/distance_20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/sofia_pro_medium"
            android:paddingHorizontal="@dimen/distance_22dp"
            android:paddingVertical="@dimen/distance_10dp"
            android:text="@string/google_button"
            android:textColor="@color/black"
            android:textSize="@dimen/size_13sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/icon_google"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/btn_start"
            app:layout_constraintEnd_toEndOf="@+id/btn_start"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn_facebook" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_180dp"
            android:fontFamily="@font/sofia_pro_medium"
            android:text="Sign in with"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            android:textColor="@color/white"
            android:textSize="@dimen/size_14sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view_left_bar"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginEnd="@dimen/distance_20dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sign_in"
            app:layout_constraintEnd_toStartOf="@+id/tv_sign_in"
            app:layout_constraintStart_toStartOf="@+id/btn_facebook"
            app:layout_constraintTop_toTopOf="@+id/tv_sign_in" />

        <View
            android:id="@+id/view_right_bar"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/distance_20dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sign_in"
            app:layout_constraintEnd_toEndOf="@+id/btn_google"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_sign_in"
            app:layout_constraintTop_toTopOf="@+id/tv_sign_in" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
