<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="profileViewModel"
            type="com.thesis.android_challenge_w3.activity.profile.ProfileViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_profile"
            tools:context=".activity.profile.ProfileActivity">

            <ImageButton
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/distance_24dp"
                android:layout_marginTop="@dimen/distance_45dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/white"
                android:paddingHorizontal="@dimen/distance_10dp"
                android:paddingVertical="@dimen/distance_12dp"
                android:src="@drawable/ic_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/fl_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="114dp"
                android:background="@drawable/circle_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/distance_90dp"
                    android:layout_height="@dimen/distance_90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/image_avatar" />

                <ImageButton
                    android:layout_width="27dp"
                    android:layout_height="34dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="14dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:src="@drawable/icon_camera" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_semi_bold"
                android:text="@{profileViewModel.user.fullName}"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_avatar" />

            <TextView
                android:id="@+id/btn_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_regular"
                android:text="@string/activity_profile_edit_profile"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />


            <TextView
                android:id="@+id/tv_title_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="49dp"
                android:fontFamily="@font/sofia_pro_regular"
                android:text="@string/activity_profile_full_name"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintStart_toStartOf="@+id/cv_full_name"
                app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_full_name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="@dimen/distance_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_full_name">

                <TextView
                    android:id="@+id/tv_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/distance_56dp"
                    android:fontFamily="@font/sofia_pro_medium"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@{profileViewModel.user.fullName}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_17sp"

                    />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_title_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:fontFamily="@font/sofia_pro_regular"
                android:text="@string/activity_profile_email"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintStart_toStartOf="@+id/cv_email"
                app:layout_constraintTop_toBottomOf="@+id/cv_full_name" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="@dimen/distance_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_email">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/distance_56dp"
                    android:fontFamily="@font/sofia_pro_medium"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@{profileViewModel.user.email}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_17sp"


                    />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_title_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:fontFamily="@font/sofia_pro_regular"
                android:text="@string/activity_profile_phone_number"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintStart_toStartOf="@+id/cv_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/cv_email" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_phone_number"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="@dimen/distance_5dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_phone_number">

                <TextView
                    android:id="@+id/tv_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/distance_56dp"
                    android:background="@drawable/border_outline_cardview"
                    android:fontFamily="@font/sofia_pro_medium"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@{profileViewModel.user.phoneNumber}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_17sp" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>